--- a/index.html
+++ b/index.html
@@ -5,28 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/cssindex.css">
     <title>MOVE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
 </head>
 <div id="cab">
-<header>
-    <img src="" alt="logo">
-    <img id="carrinho" src="img/carrinho.png" alt="carrinho">
-    <img id="fav" src="img/favoritos.png" alt="favoritos">
-    <img id="login" src="img/login.png" alt="login">
-</header>
+ <header id="cab">
+    <div id="logo-container">
+      <img id="logo" src="img/Logonova.png" alt="logo">
+    </div>
+
+    <div id="icones">
+      <img id="carrinho" src="img/carrinhonovo.png" alt="carrinho">
+      <img id="fav" src="img/favoritosnovo.png" alt="favoritos">
+      <img id="login" src="img/loginnovo.png" alt="login">
+    </div>
+  </header>
+
 </div>
 <body>
-    <img src="" alt="fotoPrincipal">
+    
+    <img src="" alt="fotPrincipal">
 
-    <h1>Encontre seu esporte favorito:</h1>
-    <img id="esportes" src="img/tenis.png" alt="">
-    <img id="esportes" src="img/natação.png" alt="">
-    <img id="esportes" src="img/luta.png" alt="">
-    <img id="esportes" src="img/bike.png" alt="">
-    <img id="esportes" src="img/bolas.png" alt="">
+    <h1 id="textoencontre">Encontre seu esporte favorito:</h1>
+    <img id="esportes" src="img/tenis.png" alt="tenis">
+    <img id="esportes" src="img/natação.png" alt="natacao">
+    <img id="esportes" src="img/luta.png" alt="luta">
+    <img id="esportes" src="img/bike.png" alt="bike">
+    <img id="esportes" src="img/bolas.png" alt="bolas">
 
     <h2>Camping e trilhas</h2>
     <h2> Suplementos e acessórios</h2>
-    <img id="seções" src="" alt="">
     <img id="seções" src="" alt="">
 
 </body>
