--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/cssindex.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>MOVE</title>
 </head>
 <div id="cab">
@@ -16,18 +19,21 @@
 </div>
 <body>
     <img src="" alt="fotoPrincipal">
-
+    
+    <div id="areainicial">
     <h1>Encontre seu esporte favorito:</h1>
     <img id="esportes" src="img/tenis.png" alt="">
     <img id="esportes" src="img/natação.png" alt="">
     <img id="esportes" src="img/luta.png" alt="">
     <img id="esportes" src="img/bike.png" alt="">
     <img id="esportes" src="img/bolas.png" alt="">
-
+    
     <h2>Camping e trilhas</h2>
     <h2> Suplementos e acessórios</h2>
     <img id="seções" src="" alt="">
     <img id="seções" src="" alt="">
+    </div>
+
 
 </body>
 </html>
