--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 <div id="cab">
 <header>
     <img src="" alt="logo">
-    <img id="carrinho" src="img/carrinho.png" alt="carrinho">
-    <img id="fav" src="img/favoritos.png" alt="favoritos">
-    <img id="login" src="img/login.png" alt="login">
+    <img id="carrinho" src="img/carrinhogpt.png" alt="carrinho">
+    <img id="fav" src="img/favoritogpt.png" alt="favoritos">
+    <img id="login" src="img/logingpt.png" alt="login">
 </header>
 </div>
 <body>
 
-    <img src="img/fotoprincipal.jpg" alt="fotoPrincipal">
+    <div id="principal">
+        <img src="img/corridas.png" alt="imagem centralizada">
+    </div>    
 
     <h1>Encontre seu esporte favorito:</h1>
     <img id="esportes" src="img/tenis2.png" alt="">
