--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,32 +9,46 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>MOVE</title>
 </head>
-<div id="cab">
-<header>
-    <img src="" alt="logo">
-    <img id="carrinho" src="img/carrinhogpt.png" alt="carrinho">
-    <img id="fav" src="img/favoritogpt.png" alt="favoritos">
-    <img id="login" src="img/logingpt.png" alt="login">
-</header>
-</div>
 <body>
 
-    <div id="principal">
-        <img src="img/corridas.png" alt="imagem centralizada">
-    </div>    
+    <header id="cab">
+        <div id="logo">
+            <!-- Substitua por uma imagem de logo se tiver -->
+            <h1>MOVE</h1>
+        </div>
+        <nav id="icones">
+            <img src="img/carrinhogpt.png" alt="Carrinho" class="icone">
+            <img src="img/favoritogpt.png" alt="Favoritos" class="icone">
+            <img src="img/logingpt.png" alt="Login" class="icone">
+        </nav>
+    </header>
 
-    <h1>Encontre seu esporte favorito:</h1>
-    <img id="esportes" src="img/tenis2.png" alt="">
-    <img id="esportes" src="img/natacao2.png" alt="">
-    <img id="esportes" src="img/luta2.png" alt="">
-    <img id="esportes" src="img/bike2.png" alt="">
-    <img id="esportes" src="img/bolas2.png" alt="">
+<div id="top-bar">
+    <input type="text" placeholder="Buscar produtos, marcas..." id="busca">
+    <button id="btn-busca">Buscar</button>
+</div>
+    <main>
+        <section id="principal">
+            <img src="img/corridas.png" alt="Imagem centralizada" class="img-principal">
+        </section>    
 
-    <h2>Camping e trilhas</h2>
-    <h2> Suplementos e acessórios</h2>
-    <img id="seções" src="img/camping.png" alt="">
-    <img id="seções" src="img/suplemento.png" alt="">
+        <section id="esportes-favoritos">
+            <h2>Encontre seu esporte favorito:</h2>
+            <div class="esportes-lista">
+                <img src="img/tenis2.png" alt="Tênis" class="esporte">
+                <img src="img/natacao2.png" alt="Natação" class="esporte">
+                <img src="img/luta2.png" alt="Luta" class="esporte">
+                <img src="img/bike2.png" alt="Bike" class="esporte">
+                <img src="img/bolas2.png" alt="Bolas" class="esporte">
+            </div>
+        </section>
 
-
+        <section id="categorias">
+            <h2>Camping e trilhas</h2>
+            <img src="img/camping.png" alt="Camping e trilhas" class="categoria">
+            <h2>Suplementos e acessórios</h2>
+            <img src="img/suplemento.png" alt="Suplementos e acessórios" class="categoria">
+        </section>
+    </main>
 </body>
 </html>
