--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
 
 <div id="top-bar">
-    <input type="text" placeholder="Buscar produtos, marcas..." id="busca">
+    <input type="text" placeholder="Buscar produtos, categorias..." id="busca">
     <button id="btn-busca">Buscar</button>
 </div>
     <main>
