--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         </section>
 
         <section id="categorias">
-            <h2>Camping e trilhas</h2>
-            <img src="img/camping.png" alt="Camping e trilhas" class="categoria">
-            <h2>Suplementos e acessórios</h2>
+            <h2>Camping e trilhas  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSuplementos e acessórios</h2>
+            <section>
+            <img src="img/camping.png" alt="Camping e trilhas" class="categoria"> 
             <img src="img/suplemento.png" alt="Suplementos e acessórios" class="categoria">
+            </section>
         </section>
     </main>
 </body>
