--- a/produtos.html
+++ b/produtos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Todos os produtos </title>
+    <link rel="stylesheet" href="estilo/cssprodutos.css">
 </head>
 <body>
 
