--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>MOVE</h1>
         </div>
         <nav id="icones">
-            <img src="img/carrinhogpt.png" alt="Carrinho" class="icone">
+            <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car">
             <img src="img/favoritogpt.png" alt="Favoritos" class="icone">
             <img src="img/logingpt.png" alt="Login" class="icone">
         </nav>
