--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
             <h1>MOVE</h1>
         </div>
         <nav id="icones">
-            <img src="img/carrinhogpt.png" alt="Carrinho" class="icone">
-            <img src="img/favoritogpt.png" alt="Favoritos" class="icone">
-            <img src="img/logingpt.png" alt="Login" class="icone">
+            <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" alt="Favoritos" class="icone"></a>
+            <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
+            
         </nav>
     </header>
 
