adicionar e tirar carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -11,16 +11,15 @@
         <a href="carrinho.html">Carrinho de Compras</a>
     </nav>
 
-    <div id="cart">
-        <h1>Seu Carrinho de Compras</h1>
-        <div id="cart-items-container"></div>
-        <div id="cart-summary">
-
-            <div id="cart-total">Total: $0.00</div>
-            <button id="checkout-btn">Proceed to Checkout</button>
-        </div>
-        <button id="clearcart-btn"> Excluir tudo </button>
+ <div id="cart">
+    <h1>Seu Carrinho de Compras</h1>
+    <div id="cart-items-container"></div>
+    <div id="cart-summary">
+        <div id="cart-total">Total: $0.00</div>
+         <br/><button id="checkout-btn">Proceed to Checkout</button> <br/>
     </div>
+    <button id="clearcart-btn"> Remover tudo </button>
+</div>
 
     <script src="script/EcommerceAPI.js"></script>
     <script src="script/scriptcarrinho.js"></script>
@@ -28,3 +27,5 @@
   
 </body>
 </html>
+
+
