--- a/produtos.html
+++ b/produtos.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Todos os produtos </title>
 
+    <link rel="stylesheet" href="estilo/cssindex.css">
     <link rel="stylesheet" href="estilo/cssprodutos.css">
 </head>
+<header id="cab">
+        <div id="logo">
+            <!-- Substitua por uma imagem de logo se tiver -->
+            <h1>MOVE</h1>
+        </div>
+        <nav id="icones">
+            <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" alt="Favoritos" class="icone"></a>
+            <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
+            
+        </nav>
+    </header>
 <body>
-
-    <nav>
-        <a href="index.html"> Página Inicial</a>
-        <a href="carrinho.html"> Carrinho de Compras</a>
-    </nav>
     
   <script src="script/EcommerceAPI.js"></script>
   <script src="script/scriptprodutos.js"></script>
