--- a/carrinho.html
+++ b/carrinho.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho de Compras</title>
+    <link rel="stylesheet" href="estilo/cssindex.css">
 </head>
+<header id="cab">
+        <div id="logo">
+            <!-- Substitua por uma imagem de logo se tiver -->
+            <h1>MOVE</h1>
+        </div>
+        <nav id="icones">
+            <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" alt="Favoritos" class="icone"></a>
+            <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
+            
+        </nav>
+    </header>
+<body>
 <body>
     <nav>
-        <a href="produtos.html">Produtos</a>
+        <a href="produtos.html">Continuar comprando</a>
         <a href="carrinho.html">Carrinho de Compras</a>
     </nav>
 
