criando filtro de busca

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <script src="script/EcommerceAPI.js"></script>
+    <script src="script/scriptprodutos.js"></script>
     <title>MOVE</title>
 </head>
 <body>
-
     <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
@@ -22,7 +23,6 @@
             <img src="img/logingpt.png" alt="Login" class="icone">
         </nav>
     </header>
-
 <div id="top-bar">
     <input type="text" placeholder="Buscar produtos, categorias..." id="busca">
     <button id="btn-busca">Buscar</button>
@@ -31,7 +31,6 @@
         <section id="principal">
             <img src="img/corridas.png" alt="Imagem centralizada" class="img-principal">
         </section>    
-
         <section id="esportes-favoritos">
             <h2>Encontre seu esporte favorito:</h2>
             <div class="esportes-lista">
@@ -42,7 +41,6 @@
                 <img src="img/bolas2.png" alt="Bolas" class="esporte">
             </div>
         </section>
-
         <section id="categorias">
             <h2>Camping e trilhas  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSuplementos e acessórios</h2>
             <section>
