--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,8 @@
     <title> Todos os produtos </title>
 
     <link rel="stylesheet" href="estilo/cssprodutos.css">
+    <script src="script/EcommerceAPI.js"></script>
+    <script src="script/scriptprodutos.js"></script>
 </head>
 <body>
 
