--- a/login.html
+++ b/login.html
@@ -4,31 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Todos os produtos </title>
-
     <link rel="stylesheet" href="estilo/cssindex.css">
+    <link rel="stylesheet" href="estilo/csslogin.css">
 
 </head>
 <header id="cab">
-        <div id="logo">
-            <!-- Substitua por uma imagem de logo se tiver -->
-            <h1>MOVE</h1>
-        </div>
-        <nav id="icones">
-
-            <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
-            
-        </nav>
-    </header>
+  <div id="logo">
+  <!-- Substitua por uma imagem de logo se tiver -->
+    <a href="index.html"><h1>MOVE</h1></a>
+  </div>
+  <nav id="icones">
+    <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
+  </nav>
+</header>
 <body>
 <input type="text" id="loginUsuario" placeholder="Usuário">
 <input type="password" id="loginSenha" placeholder="Senha">
 <button id="botaoLogin">Entrar</button>
-
-
-<a href="cadastro.html" id="btnCadastro" style="display:none">
-  Ir para cadastro
-</a>
-
+<a href="cadastro.html" id="btnCadastro" style="display:none">Ir para cadastro</a>
 <script src="script/EcommerceAPI.js"></script>
 <script>
   const api = new EcommerceAPI();
