--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
-            <h1>MOVE</h1>
+            <a href="index.html"><h1>MOVE</h1></a>
         </div>
         <nav id="icones">
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
