--- a/carrinho.html
+++ b/carrinho.html
@@ -5,26 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho de Compras</title>
     <link rel="stylesheet" href="estilo/cssindex.css">
+    <link rel="stylesheet" href="estilo/csscarrinho.css">
 </head>
 <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
-            <h1>MOVE</h1>
+            <a href="index.html"><h1>MOVE</h1></a>
         </div>
         <nav id="icones">
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
             <a href="favoritos.html"> <img src="img/favoritogpt.png" alt="Favoritos" class="icone"></a>
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
-            
         </nav>
-    </header>
+</header>
 <body>
-<body>
-    <nav>
-        <a href="produtos.html">Continuar comprando</a>
-        <a href="carrinho.html">Carrinho de Compras</a>
-    </nav>
-
  <div id="cart">
     <h1>Seu Carrinho de Compras</h1>
     <div id="cart-items-container"></div>
@@ -37,8 +31,6 @@
 
     <script src="script/EcommerceAPI.js"></script>
     <script src="script/scriptcarrinho.js"></script>
-
-  
 </body>
 </html>
 
