se o botao finalizar compra tiver ativado vai pro carrinho

--- a/carrinho.html
+++ b/carrinho.html
@@ -33,6 +33,7 @@
          <br/><button id="checkout-btn">Proceed to Checkout</button> <br/>
     </div>
     <button id="clearcart-btn"> Remover tudo </button>
+    <button id="finalizarCompraBtn">Finalizar Compra</button>
 </div>
 
     <script src="script/EcommerceAPI.js"></script>
