categorias da index criadas

--- a/index.html
+++ b/index.html
@@ -33,23 +33,40 @@
         </section>    
 
         <section id="esportes-favoritos">
-            <h2>Encontre seu esporte favorito:</h2>
-            <div class="esportes-lista">
-                <img src="img/tenis2.png" alt="Tênis" class="esporte">
-                <img src="img/natacao2.png" alt="Natação" class="esporte">
-                <img src="img/luta2.png" alt="Luta" class="esporte">
-                <img src="img/bike2.png" alt="Bike" class="esporte">
-                <img src="img/bolas2.png" alt="Bolas" class="esporte">
-            </div>
+    <h2>Encontre seu esporte favorito:</h2>
+    <div class="esportes-lista">
+        <a href="produtos.html?categoria=tennis">
+            <img src="img/tenis2.png" alt="Tênis" class="esporte">
+        </a>
+        <a href="produtos.html?categoria=natacao">
+            <img src="img/natacao2.png" alt="Natação" class="esporte">
+        </a>
+        <a href="produtos.html?categoria=luta">
+            <img src="img/luta2.png" alt="Luta" class="esporte">
+        </a>
+        <a href="produtos.html?categoria=ciclismo">
+            <img src="img/bike2.png" alt="Bike" class="esporte">
+        </a>
+        <a href="produtos.html?categoria=bola">
+            <img src="img/bolas2.png" alt="Bolas" class="esporte">
+        </a>
+    </div>
+        </section>
+        <section> 
+            <a href="produtos.html" class="btn-produtos">Ver Todos os Produtos</a>
         </section>
 
-        <section id="categorias">
-            <h2>Camping e trilhas  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSuplementos e acessórios</h2>
-            <section>
-            <img src="img/camping.png" alt="Camping e trilhas" class="categoria"> 
+    <section id="categorias">
+    <h2>Camping e trilhas  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSuplementos e acessórios</h2>
+    <section>
+        <a href="produtos.html?categoria=camping">
+            <img src="img/camping.png" alt="Camping e trilhas" class="categoria">
+        </a>
+        <a href="produtos.html?categoria=suplementos">
             <img src="img/suplemento.png" alt="Suplementos e acessórios" class="categoria">
-            </section>
-        </section>
+        </a>
+    </section>
+</section>
     </main>
 </body>
 </html>
