--- a/carrinho.html
+++ b/carrinho.html
@@ -14,7 +14,7 @@
         </div>
         <nav id="icones">
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
-            <a href="favoritos.html"> <img src="img/favoritogpt.png" alt="Favoritos" class="icone"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone" id="fav"></a>
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
         </nav>
 </header>
@@ -31,6 +31,8 @@
 
     <script src="script/EcommerceAPI.js"></script>
     <script src="script/scriptcarrinho.js"></script>
+
+
 </body>
 </html>
 
