um pouco de css

--- a/cadastro.html
+++ b/cadastro.html
@@ -6,6 +6,7 @@
     <title> Todos os produtos </title>
 
     <link rel="stylesheet" href="estilo/cssindex.css">
+    <link rel="stylesheet" href="estilo/csslogin.css">
 
 </head>
 <header id="cab">
