--- a/carrinho.html
+++ b/carrinho.html
@@ -6,6 +6,10 @@
     <title>Carrinho de Compras</title>
     <link rel="stylesheet" href="estilo/cssindex.css">
     <link rel="stylesheet" href="estilo/csscarrinho.css">
+    <link rel="stylesheet" href="estilo/cssprodutos.css">
+    <link rel="stylesheet" href="estilo/csslogin.css">
+
+
 </head>
 <header id="cab">
         <div id="logo">
@@ -20,11 +24,15 @@
 </header>
 <body>
  <div id="cart">
+    
     <h1>Seu Carrinho de Compras</h1>
     <div id="cart-items-container"></div>
     <div id="cart-summary">
         <div id="cart-total">Total: $0.00</div>
     </div>
+
+    <a href="produtos.html">Continuar comprando</a>
+
     <button id="clearcart-btn"> Remover tudo </button>
     <button id="finalizarCompraBtn">Finalizar Compra</button>
 </div>
