--- a/favoritos.html
+++ b/favoritos.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favoritos</title>
     <link rel="stylesheet" href="estilo/cssindex.css">
+    <link rel="stylesheet" href="estilo/cssprodutos.css">
+    <link rel="stylesheet" href="estilo/csslogin.css">
+    <link rel="stylesheet" href="estilo/csscarrinho.css">
 </head>
+<body>
 <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
@@ -16,8 +20,8 @@
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
         </nav>
     </header>
-<body>
-<body>
+
+
     <nav>
         <a href="produtos.html">Continuar comprando</a>
     </nav>
