--- a/login.html
+++ b/login.html
@@ -28,7 +28,10 @@
 <input type="text" id="loginUsuario" placeholder="Usuário">
 <input type="password" id="loginSenha" placeholder="Senha">
 <button id="botaoLogin">Entrar</button>
-<a href="cadastro.html" id="btnCadastro" style="display:none">Ir para cadastro</a>
+<a href="cadastro.html" id="btnCadastro" class="button" style="display:none">Ir para cadastro</a>
+
+<div id="perfil" style="display:none"></div>
+
 
 <button id="btnLogout" style="display:none">Sair</button>
 
