colocando os filtros na lateral #66

--- a/produtos.html
+++ b/produtos.html
@@ -26,13 +26,9 @@
 </header>
 
 <body>
-
     <script src="script/EcommerceAPI.js"></script>
     <script src="script/scriptprodutos.js"></script>
-
-
     <div id="filter-options-container">
-
         <div class="filter-group">
             <input type="number" id="price-filter-input" placeholder="Insira o preço máximo:" min="0">
         </div>
@@ -49,12 +45,9 @@
     </div>
     <br />
     <div id="products">
-        <h1>Nossos produtos</h1>
+        <h1>Nossos produtos:</h1>
         <div id="product-list"></div>
-
-
     </div>
-
     <div id="product-modal" class="modal">
         <div class="modal-overlay"></div>
 
@@ -64,8 +57,5 @@
             </div>
         </div>
     </div>
-
-
 </body>
-
 </html>
