--- a/favoritos.html
+++ b/favoritos.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="estilo/cssindex.css">
     <link rel="stylesheet" href="estilo/cssprodutos.css">
     <link rel="stylesheet" href="estilo/csslogin.css">
-    <link rel="stylesheet" href="estilo/csscarrinho.css">
+    <link rel="stylesheet" href="estilo/cssfavoritos.css">
+
+
+
 </head>
 <body>
 <header id="cab">
