favoritos feito, descrição também

--- a/produtos.html
+++ b/produtos.html
@@ -30,6 +30,7 @@
     <script src="script/scriptprodutos.js"></script>
     <div id="filter-options-container">
         <div class="filter-group">
+            <input type="number" id="min-price-filter-input" placeholder="Insira o preço mínimo:" min="0">
             <input type="number" id="price-filter-input" placeholder="Insira o preço máximo:" min="0">
         </div>
 
