--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                 <button id="btn-busca">Buscar</button>
             </div>
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
-            <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone"
-                    id="fav"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone"id="fav"></a>
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
 
 
@@ -40,7 +39,7 @@
 
     <main>
         <section id="principal">
-            <img src="img/corridas.png" alt="Imagem centralizada" class="img-principal">
+            <img src="img/foto2.png" alt="Imagem centralizada" class="img-principal">
         </section>
 
         <section id="esportes-favoritos">
