--- a/favoritos.html
+++ b/favoritos.html
@@ -6,7 +6,6 @@
     <title>Favoritos</title>
     <link rel="stylesheet" href="estilo/cssindex.css">
     <link rel="stylesheet" href="estilo/cssprodutos.css">
-    <link rel="stylesheet" href="estilo/csslogin.css">
     <link rel="stylesheet" href="estilo/cssfavoritos.css">
 
 
@@ -31,13 +30,12 @@
         <a href="produtos.html">Continuar comprando</a>
     </nav>
 
+    
     <h1>Meus Favoritos</h1>
-    <div id="favorites-list">
-        </div>
+    <div id="favorites-list"></div>
 
     <script src="script/EcommerceAPI.js"></script>
     <script src="script/script.favoritos.js"></script>
-
     
   
 </body>
