alterando img index

--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
             <h2>Encontre seu esporte favorito:</h2>
             <div class="filter-group" id="category-filter-group">
                 <div class="esportes-lista">
-                    <a href="produtos.html?categoria=tennis">
-                        <img src="img/tenis2.png" alt="Tênis" class="esporte">
+                    <a href="produtos.html?categoria=tennis" class="esporte">
+                        <img src="img/tenis5.png" alt="Tênis" >
                     </a>
-                    <a href="produtos.html?categoria=natacao">
-                        <img src="img/natacao2.png" alt="Natação" class="esporte">
+                    <a href="produtos.html?categoria=natacao" class="esporte">
+                        <img src="img/natacao2.png" alt="Natação">
                     </a>
-                    <a href="produtos.html?categoria=luta">
-                        <img src="img/luta2.png" alt="Luta" class="esporte">
+                    <a href="produtos.html?categoria=luta" class="esporte">
+                        <img src="img/luta2.png" alt="Luta">
                     </a>
-                    <a href="produtos.html?categoria=ciclismo">
-                        <img src="img/bike2.png" alt="Bike" class="esporte">
+                    <a href="produtos.html?categoria=ciclismo" class="esporte">
+                        <img src="img/bike2.png" alt="Bike">
                     </a>
-                    <a href="produtos.html?categoria=bola">
-                        <img src="img/bolas2.png" alt="Bolas" class="esporte">
+                    <a href="produtos.html?categoria=bola" class="esporte">
+                        <img src="img/bolas2.png" alt="Bolas">
                     </a>
                 </div>
         </section>
