--- a/favoritos.html
+++ b/favoritos.html
@@ -28,7 +28,7 @@
 
 
     <nav>
-        <a href="produtos.html">Continuar comprando</a>
+        <a id="contcomp" href="produtos.html">Continuar comprando</a>
     </nav>
 
     
