--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="footer-col">
                 <h4>A MOVE</h4>
                 <ul>
-                    <li><a href="#">Quem Somos</a></li>
+                    <li><a href="sobre.html">Quem Somos</a></li>
                     <li><a href="#">Carreiras</a></li>
                     <li><a href="#">Sustentabilidade</a></li>
                     <li><a href="#">Nossas Lojas</a></li>
