--- a/produtos.html
+++ b/produtos.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="estilo/cssindex.css">
     <link rel="stylesheet" href="estilo/cssprodutos.css">
+    <link rel="stylesheet" href="estilo/cssbotaocarrinho.css">
 </head>
 <header id="cab">
     <div id="logo">
