--- a/cadastro.html
+++ b/cadastro.html
@@ -13,13 +13,13 @@
 <header id="cab">
   <div id="logo">
     <!-- Substitua por uma imagem de logo se tiver -->
-    <h1>MOVE</h1>
-  </div>
-  <nav id="icones">
-
-    <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
-
-  </nav>
+       <a href="index.html"><h1>MOVE</h1></a>
+        </div>
+        <nav id="icones">
+            <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
+            <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone" id="fav"></a>
+            <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
+        </nav>
 </header>
 
 <body>
