--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
-            <h1>MOVE</h1>
-        </div>
+            <a href="index.html"><h1><MOVE></h1></a>
+        </div>   
+        
 
 
         <nav id="icones">
@@ -40,7 +41,7 @@
 
     <main>
         <section id="principal">
-            <img src="img/foto2.png" alt="Imagem centralizada" class="img-principal">
+            <img src="img/corrida3.png" alt="Imagem centralizada" class="img-principal">
         </section>
 
         <section id="esportes-favoritos">
