--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header id="cab">
         <div id="logo">
             <!-- Substitua por uma imagem de logo se tiver -->
-            <a href="index.html"><h1><MOVE></h1></a>
+            <a href="index.html"><h1>MOVE</h1></a>
         </div>   
         
 
