--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
     <div class="divsobre">
         <p id="textosobre">Somos um grupo de 3 alunas de Engenharia e a MOVE é o nosso segundo projeto desenvolvido
             no programa Twist, do Tecgraf/PUC-Rio.
-            Durante essa experiência, tivemos a oportunidade de aprender e aplicar conceitos de HTML, CSS e JavaScript,
+            Durante essa experiência, tivemos a oportunidade de aprender e aplicar conceitos de HTML, CSS, JavaScript e Json,
             além de utilizar a metodologia
             ágil Scrum, que nos ajudou a organizar o trabalho em equipe de forma mais dinâmica e eficiente.</p>
     </div>
@@ -48,7 +48,7 @@
             </br>
             <p>Curso: Engenharia de Computação </p>
             <p> GitHub: <a href="https://github.com/beatrizritterr" target="_blank">beatrizritter</a></p>
-            <p><a href="https://nandapiquet.github.io/Apresenta-o-pessoal/" target="_blank">Site pessoal</a></p>
+            <p><a href="https://github.com/beatrizritterr/apresenta-o-twist" target="_blank">Site pessoal</a></p>
         </article>
         <article class="pessoa">
             <img src="img/nanda.jpg" alt="Pessoa 1">
