--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,6 @@
 <body>
     <header id="cab">
         <div id="logo">
-            <!-- Substitua por uma imagem de logo se tiver -->
            <a href="index.html"><h1>MOVE</h1></a>
 
         </nav>
@@ -48,7 +47,7 @@
             </br>
             <p>Curso: Engenharia de Computação </p>
             <p> GitHub: <a href="https://github.com/beatrizritterr" target="_blank">beatrizritter</a></p>
-            <p><a href="https://github.com/beatrizritterr/apresenta-o-twist" target="_blank">Site pessoal</a></p>
+            <p><a href="https://beatrizritterr.github.io/apresenta-o-twist/" target="_blank">Site pessoal</a></p>
         </article>
         <article class="pessoa">
             <img src="img/nanda.jpg" alt="Pessoa 1">
