--- a/index.html
+++ b/index.html
@@ -157,15 +157,10 @@
     <footer class="footer-move">
         <div class="footer-container">
             <div class="footer-col footer-col-highlight">
-                <h3 class="highlight-title">Entregas Rápidas e Seguras</h3>
+                <br/><br/><h3 class="highlight-title">Entregas Rápidas e Seguras</h3>
                 <p class="highlight-info">A partir de R$11,90</p>
-
-                <h3 class="highlight-title">Baixe o App MOVE</h3>
                 <div class="social-links">
-                    <a href="" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                   
                 </div>
             </div>
 
@@ -173,30 +168,13 @@
                 <h4>A MOVE</h4>
                 <ul>
                     <li><a href="sobre.html">Quem Somos</a></li>
-                    <li><a href="#">Carreiras</a></li>
-                    <li><a href="#">Sustentabilidade</a></li>
-                    <li><a href="#">Nossas Lojas</a></li>
                 </ul>
             </div>
 
             <div class="footer-col">
                 <h4>AJUDA</h4>
                 <ul>
-                    <li><a href="#">FAQ: Perguntas Frequentes</a></li>
-                    <li><a href="#">Trocas e Devoluções</a></li>
-                    <li><a href="#">Garantias</a></li>
-                    <li><a href="#">Atendimento ao Cliente</a></li>
                     <li><a href="#">Fale Conosco</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-col">
-                <h4>SERVIÇOS MOVE</h4>
-                <ul>
-                    <li><a href="#">Personalização de Equipamento</a></li>
-                    <li><a href="#">Reparo e Manutenção</a></li>
-                    <li><a href="#">Clube MOVE</a></li>
-                    <li><a href="#">MOVE PRO (Empresas)</a></li>
                 </ul>
             </div>
 
@@ -213,13 +191,13 @@
 
         <div class="footer-bottom">
             <div class="logo-and-links">
-                <span class="footer-logo">MOVE</span>
+                <span class="footer-logo">&nbsp;&nbsp;&nbsp;MOVE</span>
                 <div class="policy-links">
-                    <a href="#">Política de Privacidade</a>
+                   <br/> <a href="#">Política de Privacidade</a>
                     <a href="#">Termos e Condições</a>
-                    <a href="#">Declaração de Acessibilidade</a>
+                    <a href="#">Declaração de Acessibilidade</a><br/> <br/>
                 </div>
-            </div>
+            </div> 
             <p class="copyright">© 2025 MOVE. Todos os direitos reservados.</p>
         </div>
     </footer>
