--- a/index.html
+++ b/index.html
@@ -22,22 +22,23 @@
                 <h1>MOVE</h1>
             </a>
         </div>
-
+        <div id="top-bar">
+                <input type="text" placeholder="Buscar produtos" id="busca">
+                <button id="btn-busca">Buscar</button>
+            </div>
 
 
         <nav id="icones">
-            <div id="top-bar">
-                <input type="text" placeholder="Buscar produtos, categorias..." id="busca">
-                <button id="btn-busca">Buscar</button>
-            </div>
+            
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
             <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone"
                     id="fav"></a>
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
 
-
         </nav>
+
     </header>
+
 
 
 
