--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <a href="index.html"><h1>MOVE</h1></a>
   </div>
   <nav id="icones">
-    <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
+    <a href="carrinho.html"> <img src="img/iconecarrinho_move.png" alt="Carrinho" class="icone" id="car"></a>
     <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone" id="fav"></a>
     <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone" id="linkLogin"></a>
   <script>
